// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: > computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          566,
          156,
        ],
        [
          576,
          159,
        ],
        [
          566,
          163,
        ],
      ],
      "headArrowPoint": [
        579,
        159,
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 432,
        "y": 131,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            436,
            148,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          394,
          159,
        ],
        [
          450,
          159,
        ],
        [
          510,
          159,
        ],
        [
          566,
          159,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "tailArrow": [
        [
          394,
          159,
        ],
        [
          388,
          155,
        ],
        [
          382,
          159,
        ],
        [
          388,
          163,
        ],
      ],
      "tailArrowPoint": [
        380,
        159,
      ],
      "target": "amazon.s3",
    },
  ],
  "height": 294,
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 278,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": null,
      "position": [
        8,
        8,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 404,
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "height": 278,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        546,
        8,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 404,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        39,
        63,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "height": 191,
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        577,
        63,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "S3",
      "width": 341,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
  "width": 958,
}
`;

exports[`dotLayout: > computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          559,
          729,
        ],
        [
          569,
          732,
        ],
        [
          559,
          736,
        ],
      ],
      "headArrowPoint": [
        572,
        732,
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "parent": "cloud.backend",
      "points": [
        [
          392,
          732,
        ],
        [
          448,
          732,
        ],
        [
          503,
          732,
        ],
        [
          559,
          732,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          231,
          629,
        ],
        [
          228,
          640,
        ],
        [
          224,
          630,
        ],
      ],
      "headArrowPoint": [
        228,
        643,
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labelBBox": {
        "height": 37,
        "width": 200,
        "x": 230,
        "y": 536,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            234,
            553,
          ],
          "text": "fetches data in zero trust network",
          "width": 192,
        },
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            234,
            569,
          ],
          "text": "with sso authentification",
          "width": 139,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          221,
          492,
        ],
        [
          223,
          535,
        ],
        [
          225,
          586,
        ],
        [
          228,
          630,
        ],
        [
          615,
          653,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          378,
          638,
        ],
        [
          368,
          641,
        ],
        [
          374,
          632,
        ],
      ],
      "headArrowPoint": [
        365,
        643,
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labelBBox": {
        "height": 21,
        "width": 79,
        "x": 499,
        "y": 544,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            503,
            561,
          ],
          "text": "fetches data",
          "width": 71,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          545,
          492,
        ],
        [
          516,
          520,
        ],
        [
          483,
          551,
        ],
        [
          451,
          577,
        ],
        [
          428,
          597,
        ],
        [
          401,
          617,
        ],
        [
          375,
          635,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          220,
          300,
        ],
        [
          216,
          310,
        ],
        [
          213,
          300,
        ],
      ],
      "headArrowPoint": [
        216,
        313,
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 222,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            226,
            241,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          216,
          180,
        ],
        [
          216,
          218,
        ],
        [
          216,
          261,
        ],
        [
          216,
          300,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          636,
          300,
        ],
        [
          632,
          310,
        ],
        [
          629,
          300,
        ],
      ],
      "headArrowPoint": [
        632,
        313,
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 638,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            642,
            241,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          632,
          180,
        ],
        [
          632,
          218,
        ],
        [
          632,
          261,
        ],
        [
          632,
          300,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          1005,
          192,
        ],
        [
          1012,
          183,
        ],
        [
          1012,
          194,
        ],
      ],
      "headArrowPoint": [
        1013,
        180,
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 989,
        "y": 390,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            993,
            407,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          804,
          628,
        ],
        [
          831,
          587,
        ],
        [
          861,
          539,
        ],
        [
          884,
          493,
        ],
        [
          935,
          394,
        ],
        [
          980,
          275,
        ],
        [
          1009,
          193,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "tail": "odiamond",
      "tailArrow": [
        [
          804,
          628,
        ],
        [
          798,
          631,
        ],
        [
          798,
          638,
        ],
        [
          804,
          635,
        ],
      ],
      "tailArrowPoint": [
        797,
        640,
      ],
      "target": "amazon",
    },
  ],
  "height": 923,
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "height": 648,
      "id": "cloud",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": null,
      "position": [
        8,
        267,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 988,
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 278,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud",
      "position": [
        40,
        605,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 924,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "height": 191,
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        71,
        642,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Graphql API",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "height": 191,
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labels": [],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        571,
        640,
      ],
      "shape": "storage",
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "height": 191,
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        55,
        313,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "height": 191,
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        465,
        313,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 191,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        55,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        471,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 191,
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        881,
        0,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 341,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1202,
}
`;

exports[`dotLayout: > computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          1102,
          399,
        ],
        [
          1112,
          403,
        ],
        [
          1102,
          406,
        ],
      ],
      "headArrowPoint": [
        1115,
        403,
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "[...]",
      "labelBBox": {
        "height": 21,
        "width": 28,
        "x": 1015,
        "y": 374,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            1019,
            391,
          ],
          "text": "[...]",
          "width": 20,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          935,
          403,
        ],
        [
          989,
          403,
        ],
        [
          1048,
          403,
        ],
        [
          1103,
          403,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          712,
          300,
        ],
        [
          715,
          310,
        ],
        [
          707,
          304,
        ],
      ],
      "headArrowPoint": [
        717,
        313,
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 680,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            684,
            241,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          629,
          180,
        ],
        [
          654,
          218,
        ],
        [
          684,
          263,
        ],
        [
          710,
          302,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          844,
          304,
        ],
        [
          836,
          310,
        ],
        [
          839,
          300,
        ],
      ],
      "headArrowPoint": [
        834,
        313,
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 897,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            901,
            241,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          922,
          180,
        ],
        [
          897,
          218,
        ],
        [
          867,
          263,
        ],
        [
          841,
          302,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          331,
          170,
        ],
        [
          323,
          162,
        ],
        [
          334,
          163,
        ],
      ],
      "headArrowPoint": [
        320,
        161,
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 539,
        "y": 224,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            543,
            241,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          1113,
          307,
        ],
        [
          1072,
          286,
        ],
        [
          1025,
          268,
        ],
        [
          981,
          257,
        ],
        [
          932,
          245,
        ],
        [
          580,
          259,
        ],
        [
          532,
          249,
        ],
        [
          453,
          233,
        ],
        [
          439,
          212,
        ],
        [
          366,
          180,
        ],
        [
          355,
          176,
        ],
        [
          343,
          171,
        ],
        [
          332,
          166,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "tail": "odiamond",
      "tailArrow": [
        [
          1114,
          307,
        ],
        [
          1117,
          313,
        ],
        [
          1124,
          312,
        ],
        [
          1121,
          306,
        ],
      ],
      "tailArrowPoint": [
        1126,
        313,
      ],
      "target": "amazon",
    },
  ],
  "height": 553,
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "height": 278,
      "id": "cloud",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": null,
      "position": [
        584,
        257,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 923,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "component",
      "labels": [],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        615,
        313,
      ],
      "shape": "browser",
      "tags": null,
      "technology": null,
      "title": "Frontend",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 20,
          "pt": [
            123,
            96,
          ],
          "text": "Backend",
          "width": 78,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        1114,
        313,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Backend",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 191,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        859,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 191,
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 341,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 1475,
}
`;

exports[`dotLayout: > computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          314,
          291,
        ],
        [
          317,
          302,
        ],
        [
          308,
          296,
        ],
      ],
      "headArrowPoint": [
        319,
        304,
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labelBBox": {
        "height": 21,
        "width": 107,
        "x": 291,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            295,
            251,
          ],
          "text": "opens in browser",
          "width": 99,
        },
      ],
      "parent": null,
      "points": [
        [
          237,
          190,
        ],
        [
          261,
          223,
        ],
        [
          287,
          260,
        ],
        [
          311,
          294,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          569,
          316,
        ],
        [
          558,
          317,
        ],
        [
          566,
          310,
        ],
      ],
      "headArrowPoint": [
        555,
        319,
      ],
      "id": "support:cloud",
      "label": "manages",
      "labelBBox": {
        "height": 21,
        "width": 62,
        "x": 733,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            737,
            251,
          ],
          "text": "manages",
          "width": 54,
        },
      ],
      "parent": null,
      "points": [
        [
          861,
          176,
        ],
        [
          770,
          218,
        ],
        [
          659,
          270,
        ],
        [
          567,
          313,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          523,
          199,
        ],
        [
          532,
          193,
        ],
        [
          529,
          203,
        ],
      ],
      "headArrowPoint": [
        534,
        190,
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labelBBox": {
        "height": 21,
        "width": 102,
        "x": 506,
        "y": 234,
      },
      "labels": [
        {
          "align": "left",
          "color": "#c6c6c6",
          "fontSize": 13,
          "pt": [
            510,
            251,
          ],
          "text": "persists artifacts",
          "width": 94,
        },
      ],
      "parent": null,
      "points": [
        [
          461,
          293,
        ],
        [
          482,
          263,
        ],
        [
          505,
          230,
        ],
        [
          526,
          201,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "tail": "odiamond",
      "tailArrow": [
        [
          461,
          293,
        ],
        [
          454,
          295,
        ],
        [
          454,
          303,
        ],
        [
          460,
          300,
        ],
      ],
      "tailArrowPoint": [
        453,
        304,
      ],
      "target": "amazon",
    },
  ],
  "height": 494,
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "customer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "height": 191,
      "id": "cloud",
      "inEdges": [
        "support:cloud",
        "customer:cloud",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        215,
        303,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "cloud",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "height": 191,
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        859,
        0,
      ],
      "shape": "person",
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
      "width": 341,
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "height": 191,
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labels": [],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        430,
        0,
      ],
      "shape": "rectangle",
      "tags": null,
      "technology": null,
      "title": "Amazon",
      "width": 341,
    },
  ],
  "tags": null,
  "title": "",
  "width": 1201,
}
`;
